# mdg_script

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bq_schemas/: Campaigns.json  Purchases.json
docs/: branch-management.md  commit-patterns.md  how-to-authenticate.md  sequence-diagram.md  tools-and-dependencies.md
docs/application-environment/: ubuntu.md  windows.md
docs/application-to-run/: steps-to-run.md
img/: google-bigquery-logo.txt
mdg_script/: auth.py  config.py  datagen.py  fakedata.py  schemas.py
mdg_script/bq_schemas/: mock_simple_card.json
mock_data/: app_to_bq.py  auth.py  bq_table.py  config.py  create_class.py  datagen.py  fakedata.py  get_schemas.py  main.py  mock_card.json  models.py  publisher.py  pyproject.toml  routes.py  schemas.py  send_data.py  test_get_schema.py  utils.py
mock_data/bq_schemas/: account.json  mock_cartao.json  mock_cartao.py
new implements/: utils.py
new_implements/: app.py  config.py  logging.ini
new_implements/data_sample_json/: README.md
new_implements/example_of_expected_return/: example.py
old/: utils.py
old/bq_schemas/base_operacional/: fatura_fechada.json  limite_disponibilidade_pos_mensal.json
old/bq_schemas/pfs_raw_conductor/: adesao_pacote_tarifa.json  conta.json  evento_externo_pagamento.json  seguro_pessoa.json
old/bq_schemas/pfs_risco_tivea/: cartao.json  cobranca_campo_customizavel.json  cobranca_email_cliente.json
old/datagen/: pfs_risco_raw_tivea.py
old/py_models/: pfs_pfin_raw_dw_models.py  pfs_raw_conductor_models.py  pfs_risco_raw_tivea_models.py
old/py_schemas/: pfs_raw_conductor.py
src/: app.py  auth.py  config.py  csv_format.py  csv_load.py  datagen.py  function_generation.py  gemini_datagen.py  gemini_datagen_pfs_risco_tivea.py  gemini_interface.py  gemini_response.py  gemini_results.py  generate_models.py  jsonl_format.py  main.py  models.py  test_connection.py  update_description.py  utils.py
src/bq_schemas/: default.json  mock_simple_account.json
src/datagen/: base_operacional.py  base_operacional_models.py  di_dw_incremental.py  jsonl_convert.py  pfs_pfin_raw_dw.py  pfs_pfin_termometro.py  pfs_raw_conductor.py  pfs_raw_credit.py  pfs_raw_credit_models.py  pfs_raw_dock.py  pfs_raw_funcao.py  pfs_raw_net_promote_score.py  pfs_raw_onidata.py  pfs_raw_pix.py  pfs_raw_rh.py  pfs_raw_unicom.py  pfs_risco_raw_neurotech.py  pfs_risco_raw_tivea.py  pfs_risco_tivea.py  pfs_seguros_ssa.py  pfs_unificacao_cliente.py  pfs_unificacao_pefisa.py  raw_dock.py  raw_facilita_whatsapp.py  varejo_mkt_segmento_estrategico.py
src/py_models/: __init__.py  base_operacional_models.py  pfs_pfin_raw_dw_models.py  pfs_raw_conductor_models.py  pfs_raw_pix_models.py  pfs_risco_raw_neurotech_models.py  pfs_risco_raw_tivea_models.py  pfs_risco_tivea_models.py  pfs_seguros_ssa_models.py  pfs_unificacao_cliente_models.py  pfs_unificacao_pefisa_models.py  raw_dock_models.py
src/py_schemas/: __init__.py  base_operacional.py  base_operacional_schemas.py  di_dw_incremental.py  pfs_pfin_raw_dw.py  pfs_pfin_raw_dw_schemas.py  pfs_pfin_termometro.py  pfs_raw_conductor.py  pfs_raw_conductor_schemas.py  pfs_raw_credit.py  pfs_raw_dock.py  pfs_raw_funcao.py  pfs_raw_net_promote_score.py  pfs_raw_onidata.py  pfs_raw_pix.py  pfs_raw_pix_schemas.py  pfs_raw_rh.py  pfs_raw_unicom.py  pfs_risco_raw_neurotech.py  pfs_risco_raw_tivea.py  pfs_risco_tivea.py  pfs_seguros_ssa.py  pfs_seguros_ssa_schemas.py  pfs_unificacao_cliente.py  pfs_unificacao_cliente_schemas.py  pfs_unificacao_pefisa.py  pfs_unificacao_pefisa_schemas.py  raw_dock.py  raw_facilita_whatsapp.py  varejo_mkt_segmento_estrategico.py
(+212 files in other folders)
