[tool.poetry]
name = "mdg_script"
version = "0.2.0"
description = "Script gerador de dados mockados para Datasets do BigQuery"
authors = [
    "KauanIzidoro <cnttbussineskauan@gmail.com>",
    "scryng <gnyrcs@gmail.com>",
    "eoKelvio <kelvinsc7@gmail.com>",
    "rafael-rodrigues01 <rafa_rodrigues01@yahoo.com>",
    "Henferper <henriquealcalde@hotmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
google-cloud-bigquery = "^3.26.0"
google-cloud-secret-manager = "^2.20.2"
google-auth = "^2.35.0"
taskipy = "^1.13.0"
pydantic = "^2.9.2"
vertexai = "^1.71.1"
faker = "^30.8.2"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.ruff]
line-length = 79
extend-exclude = ['__pycache__']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff . --diff'
format = 'ruff check . --fix && ruff format'
auth1 = 'gcloud auth login'
auth2 = 'gcloud auth application-default login'
run = 'python src/main.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
